# FABLE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  exp.sh  setup.sh
.github/workflows/: build.yml
cmake/: ezpc.patch
src/: CMakeLists.txt  LUT_utils.h  batchlut.cpp  bench_fable.cpp  bench_splut.cpp  gen_flute_lut.cpp
src/GC/: CMakeLists.txt  aes.cpp  aes.h  custom_types.h  deduplicate.cpp  deduplicate.h  io_utils.cpp  io_utils.h  lookup.cpp  lookup.h  lowmc.cpp  lowmc.h  orcompact.cpp  orcompact.h  sort.cpp  sort.h  subcube_query.cpp  subcube_query.h
src/OT/: CMakeLists.txt  silent_ot.cpp  silent_ot.h  splut.cpp  splut.h
src/applications/: CMakeLists.txt  embedding-baseline.py  embedding.cpp  join.cpp
src/utils/: CMakeLists.txt  io_utils.cpp  io_utils.h
test/: CMakeLists.txt  test_aes.cpp  test_compaction.cpp  test_deduplication.cpp  test_dpf_cmp.cpp  test_lowmc.cpp  test_oplut.cpp  test_sort.cpp  test_splut.cpp  test_subcube.cpp
