macro (add_GC_test _name)
	add_executable(${_name} "test_${_name}.cpp")
    target_link_libraries(${_name} batchlut-GC batchlut-utils) 
    target_include_directories(${_name} PRIVATE "${PROJECT_SOURCE_DIR}/src")
endmacro()

macro (add_test_float _name)
	add_executable(${_name} "test_${_name}.cpp")
    target_link_libraries(${_name} batchlut-GC batchlut-OT batchlut-utils) 
    target_include_directories(${_name} PRIVATE "${PROJECT_SOURCE_DIR}/src")
endmacro()

add_GC_test(sort)
add_GC_test(dpf_cmp)
add_GC_test(compaction)
add_GC_test(deduplication)
add_GC_test(lowmc)
add_GC_test(aes)
add_GC_test(subcube)
add_test_float(splut)
add_test_float(oplut)